# fintrack-graphrag

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
certs/: ca.crt  ca.srl  client.crt  server.crt
data/: sp500_ciks.txt
docker/: Dockerfile.java-gateway  Dockerfile.python-nlp  Dockerfile.rust-ingestion  Dockerfile.rust-producer
frontend/: ARCHITECTURE.md
frontend/app/: index.html  package-lock.json  package.json
frontend/app/src/: App.tsx  index.css
frontend/app/src/components/chat/: ChatInterface.tsx
frontend/app/src/components/graph/: KnowledgeGraph.tsx
frontend/app/src/components/layout/: SplitPaneLayout.tsx
frontend/app/src/hooks/: useFintrackStream.ts
frontend/app/src/lib/: layoutUtils.ts
frontend/app/src/store/: index.ts
frontend/app/src/types/: dagre.d.ts  index.ts
k8s/namespaces/observability/: prometheus.yml
src/apps/fintrack_gateway/: pom.xml
src/apps/fintrack_gateway/src/main/java/com/enterprise/fintrack/: Main.java
src/apps/fintrack_gateway/src/main/java/com/enterprise/fintrack/application/: GraphRagOrchestrationUseCase.java
src/apps/fintrack_gateway/src/main/java/com/enterprise/fintrack/domain/: QueryIntentType.java
src/apps/fintrack_gateway/src/main/java/com/enterprise/fintrack/domain/ports/: CypherValidationPort.java  EmbeddingServicePort.java  GraphPersistencePort.java
src/apps/fintrack_gateway/src/main/java/com/enterprise/fintrack/infra/: CypherValidationAdapter.java  GrpcEmbeddingClientAdapter.java  Neo4jAsyncAdapter.java
src/apps/fintrack_gateway/src/main/java/com/enterprise/fintrack/infra/netty/: GraphRagHttpHandler.java  GraphRagServer.java
src/apps/ingestion_service/: Cargo.toml
src/apps/ingestion_service/src/: main.rs
src/apps/ingestion_service/src/application/: mod.rs  sec_crawler_usecase.rs
src/apps/ingestion_service/src/domain/: mod.rs  rate_limiter.rs  sec_filing.rs
src/apps/ingestion_service/src/infrastructure/: edgar_client.rs  kafka_publisher.rs  mod.rs  pg_staging_repository.rs  sec_token_bucket.rs
src/apps/nlp_processing_engine/: pyproject.toml
src/apps/nlp_processing_engine/src/: main.py
src/apps/nlp_processing_engine/src/application/: entity_resolution.py  llm_extractor.py  semantic_chunker.py
src/apps/nlp_processing_engine/src/domain/: fibo_ontology.py
src/apps/nlp_processing_engine/src/infrastructure/: embedding_pb2.py  embedding_pb2_grpc.py  grpc_servicer.py  neo4j_repository.py
src/apps/producer_service/: Cargo.toml
src/apps/producer_service/src/: main.rs
src/libs/protobuf-schemas/: embedding.proto
