[workspace]
resolver = "2"
members = [
    "src/apps/ingestion_service",
    "src/apps/producer_service"
    ]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Enterprise Architecture Team"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "zstd"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
async-trait = "0.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.31"
encoding_rs = "0.8" 
regex = "1.10"      
lazy_static = "1.4"
