[package]
name = "producer_service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
quick-xml = { version = "0.31", features = ["serialize"] }


governor = "0.6"
nonzero_ext = "0.3"